# wasm2proto

./: .gitmodules  CODEOWNERS  Cargo.toml  build.rs
proto/: libernet-program.proto  libernet_wasm.proto  libernet_wasm_operators.proto  libernet_wasm_types.proto  program.proto  wasm-operators.proto  wasm-types.proto
src/: helpers.rs  operators.rs  program_module.rs  sections.rs  wasm2proto.rs
